# nmpde-wave-equation-solver

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  wave.prm
_static/: square_structured.avi
include/: Wave.hpp  parameters.hpp  problem_functions.hpp  time_integrator.hpp
include/enum/: boundary_type.hpp  convergence_type.hpp  problem_type.hpp  time_scheme.hpp
include/functions/: mms_functions.hpp  problem_functions.hpp
include/time_integrator/: central_difference_integrator.hpp  newmark_integrator.hpp  theta_integrator.hpp  time_integrator.hpp
include/utils/: conditional_o_stream_wrapper.hpp  mesh_generator.hpp  progress_bar.hpp
mesh/: README.md  generated_mesh.vtk  lshape.geo  mesh-cube.geo  mesh-square-20.geo  mesh-square-20.msh  square_structured.geo  square_structured.msh  square_unstructured.geo
parameters/: convergence.prm  expr.prm  mms.prm  wave.prm
results/: convergence_spatial.csv  convergence_temporal.csv  time_series.csv
results/space_convergence/backward_euler/: dt0_01.csv
results/space_convergence/crank_nicolson/: space_convergence-crank_nicolson-dt0_01.csv
results/time_convergence/backward_euler/: h0_01.csv
results/time_convergence/crank_nicolson/: time_convergence-crank_nicolson-h0_01.csv
results/time_convergence/explicit_euler/: time_convergence-explicit_euler-h0_01.csv
results/time_convergence/theta07_implicit/: h0_01.csv
scripts/: plot_convergence.py  plot_dispersion.py
src/: Wave.cpp  Wave.hpp  main.cpp  mesh_generator.cpp  parameters.hpp  theta_integrator.cpp  theta_integrator.hpp  time_integrator.hpp  time_scheme.hpp  wave-convergence.cpp  wave-dispersion.cpp  wave-solver.cpp  wave_convergence.cpp  wave_dispersion.cpp  wave_solver.cpp
src/time_integrator/: central_difference_integrator.cpp  newmark_integrator.cpp  theta_integrator.cpp
src/utils/: mesh_generator.cpp
tools/: convergence_plot.py  prm_gui.py  space_convergence_plot.py
tools/plot/: Dockerfile  __init__.py  convergence_utils.py  mms_viewer.py  plot_convergence.py  requirements.txt
tools/plot/markdown/: convergence_explanation.py  dissipation_explanation.py  mms_explanation.py  modal_explanation.py
tools/plot/utils/: convergence_utils.py  csv_utils.py  generate_markdown.py  llm_utils.py  plot_comparison.py
